--- a/testdata/vultr/api-key.yaml.sample
+++ b/testdata/vultr/api-key.yaml.sample
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: vultr-credentials
+  namespace: cert-manager
 type: Opaque
 data:
   apiKey: "<Add your Base64 encoded Vultr API Key here.>"
