--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,8 @@ name: notify-release
 
 on:
   push:
-    tags: v*
+    tags:
+      - 'v*'
 
 jobs:
   goreleaser:
@@ -16,11 +17,18 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
           args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release-notify:
     runs-on: ubuntu-latest
     name: Release Notification
