--- a/.github/workflows/notify-pr.yml
+++ b/.github/workflows/notify-pr.yml
@@ -8,7 +8,7 @@ jobs:
     name: Pull Request Notification
     steps:
       - run: |
-          echo "{\"text\":\"GoVultr : PR https://github.com/vultr/cert-manager-webhook-vultr/pull/${{ github.event.number }} \"}" > mattermost.json
+          echo "{\"text\":\"Cert Manager : PR https://github.com/vultr/cert-manager-webhook-vultr/pull/${{ github.event.number }} \"}" > mattermost.json
       - uses: mattermost/action-mattermost-notify@master
         env:
           MATTERMOST_WEBHOOK_URL: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
