--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -71,6 +71,7 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Clear
         if: always()
