--- a/deploy/cert-manager-webhook-vultr/templates/deployment.yaml
+++ b/deploy/cert-manager-webhook-vultr/templates/deployment.yaml
@@ -27,12 +27,13 @@ spec:
           args:
             - --tls-cert-file=/tls/tls.crt
             - --tls-private-key-file=/tls/tls.key
+            - --secure-port={{ .Values.webhook.port }}
           env:
             - name: GROUP_NAME
               value: {{ .Values.groupName | quote }}
           ports:
             - name: https
-              containerPort: 443
+              containerPort: {{ .Values.webhook.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
